force-app/main/default/objects/DepositosRecomendados__c/DepositosRecomendados__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DepósitosRecomendados</label>
</CustomObject>