force-app/main/default/objects/DepositosRecomendados__c/fields/Capacidad_maxima__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_maxima__c</fullName>
    <label>Capacidad máxima</label>
    <length>50</length>
    <type>Text</type>
</CustomField>