force-app/main/default/objects/DepositosRecomendados__c/fields/Capacidad_minima__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_minima__c</fullName>
    <label>Capacidad mínima</label>
    <length>50</length>
    <type>Text</type>
</CustomField>