force-app/main/default/objects/DepositosRecomendados__c/fields/Potencia_maxima__c.field-meta.xml
<CustomField>
    <fullName>Potencia_maxima__c</fullName>
    <label>Potencia máxima</label>
    <length>50</length>
    <type>Text</type>
</CustomField>