force-app/main/default/objects/DepositosRecomendados__c/fields/Potencia_minima__c.field-meta.xml
<CustomField>
    <fullName>Potencia_minima__c</fullName>
    <label>Potencia mínima</label>
    <length>50</length>
    <type>Text</type>
</CustomField>