force-app/main/default/objects/DepositosRecomendados__c/listViews/Dep_sitosRecomendados.listView-meta.xml
<ListView>
    <fullName>Dep_sitosRecomendados</fullName>
    <columns>NAME</columns>
    <columns>Capacidad_maxima__c</columns>
    <columns>Capacidad_minima__c</columns>
    <columns>Deposito__c</columns>
    <columns>Potencia_maxima__c</columns>
    <columns>Potencia_minima__c</columns>
    <filterScope>Everything</filterScope>
    <label>DepósitosRecomendados</label>
    <language>es</language>
</ListView>